Fix “cut off” background on large previews
Previously the white background was being cut off on the large preview becuase the containing element it was being applied to didn’t extend to the full height of the template being previewed. This left a “cutt off” in the background color when the Template was scrolled.

--- a/apps/full-site-editing/full-site-editing-plugin/starter-page-templates/page-template-modal/styles/starter-page-templates-editor.scss
+++ b/apps/full-site-editing/full-site-editing-plugin/starter-page-templates/page-template-modal/styles/starter-page-templates-editor.scss
@@ -231,6 +231,7 @@ body.admin-bar:not( .is-fullscreen-mode ) .page-template-modal-screen-overlay {
 	overflow-y: auto;
 
 	&.is-loaded {
+		background: #fff; // restore white as the default background behind entire preview
 		pointer-events: auto; // reset to allow scrolling loaded previews
 	}
 }
@@ -312,10 +313,7 @@ body.admin-bar:not( .is-fullscreen-mode ) .page-template-modal-screen-overlay {
 
 	.editor-styles-wrapper {
 		height: 100%;
-	}
-
-	// editor-writing-flow
-	.editor-writing-flow {
-		//width: 100%;
+		// remove background as it doesn't fill 100% of scrollable preview container
+		background: none;
 	}
 }
